fix screenshot image stretching

--- a/src/components/InfoSection.scss
+++ b/src/components/InfoSection.scss
@@ -15,12 +15,16 @@
     display: flex;
     // align-items: flex-start;
     padding: 0 10px 0 10px;
+    .InfoSection-mainImage {
+      align-self: flex-start;
+      margin: 0 auto;
+    }
     @media only screen and (max-width: 600px) {
       padding: 0;
 
       flex-direction: column;
       align-items: center;
-      img {
+      .InfoSection-mainImage {
         margin-bottom: 14px;
       }
     }
